# arbix-ide

./: Copy of in_data(1) (1).xlsx  LICENSE  README.md  STD_data (1).xlsx  index.html  package-lock.json  package.json  recuter.py  script.js  student.py  style.css
Desktop/arbitrium-stylus/: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs  stylus.config.toml
Desktop/arbitrium-stylus/.github/workflows/: ci.yml
Desktop/arbitrium-stylus/AI/: README.md  main.py  requirements.txt  start.bat
Desktop/arbitrium-stylus/cli/: Cargo.toml
Desktop/arbitrium-stylus/cli/src/: main.rs
Desktop/arbitrium-stylus/core/: Cargo.toml
Desktop/arbitrium-stylus/core/src/: lib.rs
Desktop/arbitrium-stylus/examples/simple-counter/: Cargo.toml  stylus.config.toml
Desktop/arbitrium-stylus/examples/simple-counter/src/: lib.rs
Desktop/arbitrium-stylus/examples/simple-counter/tests/: integration.rs
Desktop/arbitrium-stylus/harness/: Cargo.toml
Desktop/arbitrium-stylus/harness/src/: lib.rs
Desktop/arbitrium-stylus/harness/tests/: basic.rs
Desktop/arbitrium-stylus/web/: package-lock.json  package.json
Desktop/arbitrium-stylus/web/public/: index.html
Desktop/arbitrium-stylus/web/src/: App.css  App.js  index.css
Desktop/arbitrium-stylus/web/src/components/: EnterpriseFeatures.js  GasAnalytics.js  GitPanel.js  LearnARB.js
app/: globals.css  layout.tsx  page.tsx
app/blog/: page.tsx
components/: arbitrum-chatbot.tsx  footer.tsx  header.tsx  hero-section.tsx  ide-section.tsx  plugins-section.tsx
lib/: translations.ts
(+16 files in other folders)
