[workspace]
members = ["core", "harness", "cli"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
wasmer = "4.2"
wasmer-wasi = "4.2"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }