[package]
name = "stylus-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stylus"
path = "src/main.rs"

[dependencies]
stylus-core = { path = "../core" }
stylus-harness = { path = "../harness" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }