[package]
name = "stylus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
wasmer = { workspace = true }
wasmer-wasi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wat = "1.0"